# Hildr

./: CMakeLists.txt  README.md
cmake_modules/: FindXerces.cmake  FindXercesC.cmake
data/maps/test-map/: test-map.xml
src/: CMakeLists.txt
src/game/: CMakeLists.txt  Camera.h  CameraSoldier.cpp  CameraSoldier.h  Client.cpp  Client.h  Game.cpp  Game.h  MainMenu.cpp  MainMenu.h  Map.cpp  Player.cpp  Player.h  World.cpp  World.h  hildr.cpp
src/libraries/: CMakeLists.txt
src/libraries/hildr-map/: CMakeLists.txt  Map.cpp  Texture.cpp
src/libraries/hildr-map/include/: Map.h
src/libraries/hildr-map/include/hildr-map/: Map.h  Texture.h
src/libraries/hildr-tools/: CMakeLists.txt  XmlConfig.cpp
src/libraries/hildr-tools/include/hildr-tools/: XmlConfig.h  constants.h  hildr-tools.h
src/map-editor/: CMakeLists.txt  GLRenderWidget.cpp  GLRenderWidget.h  MainWindow.cpp  MainWindow.h  hildr-map-editor.cpp
